<resources>
    <string name="app_name">NotePro</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="delete_message_confirm">Are you sure you want to delete?</string>
    <string name="delete_all_nots_confirm">Are you sure you want to delete all notes?</string>
    <string name="done_confirm_message">Have you done?</string>
    <string name="please_choose_importance">Please choose priority</string>
    <string name="please_add_smth">Please add something</string>


    <!--Add Note Layout-->
    <string name="note_name_hint">Name</string>
    <string name="very_important">very important</string>
    <string name="important">important</string>
    <string name="not_so_important">not so important</string>
    <string name="not_important">not important</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>


</resources>