<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7c7b89"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/add"
            android:textColor="#fff"
            android:textSize="36sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/note_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/add"
        android:hint="@string/note_name_hint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:id="@+id/deadline_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set deadline"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_name_edit" />

    <CheckBox
        android:id="@+id/checkbox_very_important"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/red"
        android:text="@string/very_important"
        android:textColor="@color/red"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/deadline_txt" />

    <CheckBox
        android:id="@+id/checkbox_not_so__important"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/green"
        android:text="@string/not_so_important"
        android:textColor="@color/green"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/checkbox_very_important" />


    <CheckBox
        android:id="@+id/checkbox_important"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/orange"
        android:text="@string/important"
        android:textColor="@color/orange"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="@id/checkbox_not_important"
        app:layout_constraintTop_toBottomOf="@id/deadline_txt" />


    <CheckBox
        android:id="@+id/checkbox_not_important"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/light_green"
        android:text="@string/not_important"
        android:textColor="@color/light_green"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/checkbox_important" />

<!--    <RadioGroup-->
<!--        android:id="@+id/importance_group"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/deadline_txt">-->

<!--        <RadioButton-->
<!--            android:id="@+id/checkbox_very_important"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:buttonTint="@color/red"-->
<!--            android:text="@string/very_important"-->
<!--            android:textColor="@color/red"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            android:layout_marginStart="10dp"-->
<!--            app:layout_constraintTop_toBottomOf="@id/deadline_txt" />-->

<!--    </RadioGroup>-->

</androidx.constraintlayout.widget.ConstraintLayout>